[sources] Fix navigator tree in high contrast mode.
Drive-by-fix: Also avoid using filter/opacity for source mapped and
ignore listed items, and cleanup the unused `.icon-stack` class.

Fixed: chromium:1515224
Screenshot: https://imgur.com/312JLKK.png
Bug: chromium:1514825, chromium:1421730
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5162753
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/sources/navigatorTree.css
+++ b/front_end/panels/sources/navigatorTree.css
@@ -37,17 +37,6 @@
   margin: -3px -5px;
 }
 
-.icon-stack {
-  position: relative;
-  display: inline-flex;
-}
-
-.icon-stack > [is="ui-icon"]:not(:first-child) {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
 .navigator-fs-tree-item:not(.has-mapped-files):not(.selected) > :not(.selection),
 .navigator-fs-folder-tree-item:not(.has-mapped-files):not(.selected) > :not(.selection) {
   filter: grayscale(50%);
@@ -126,7 +115,7 @@
 
 @media (forced-colors: active) {
   .tree-outline li .leading-icons devtools-icon {
-    background: ButtonText;
+    color: ButtonText;
   }
 
   .tree-outline li:hover:not(.selected) .selection {
@@ -134,13 +123,20 @@
     background-color: Highlight;
   }
 
-  .tree-outline:not(.hide-selection-when-blurred) li.parent:hover:not(.selected)::before,
-  .tree-outline:not(.hide-selection-when-blurred) li:hover:not(.selected) devtools-icon {
+  .tree-outline:not(.hide-selection-when-blurred) li.parent:hover:not(.selected)::before {
     background-color: HighlightText;
   }
 
+  .tree-outline:not(.hide-selection-when-blurred) li:hover:not(.selected) devtools-icon,
   .tree-outline li:not(.selected):hover .tree-element-title {
     forced-color-adjust: none;
     color: HighlightText;
+  }
+
+  .navigator-fs-tree-item:not(.has-mapped-files):not(.selected) > :not(.selection),
+  .navigator-fs-folder-tree-item:not(.has-mapped-files):not(.selected) > :not(.selection),
+  .is-ignore-listed {
+    filter: none;
+    opacity: 100%;
   }
 }
